--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
-    "firebase": "^11.6.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "firebase": "^11.7.3",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "nanoid": "^5.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.2"
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.6.0",
+    "react-youtube": "^10.1.0",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -29,6 +36,6 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
-    "vite": "^6.3.1"
+    "vite": "^6.3.5"
   }
 }
